# pyspatialite

./: .gitignore  CMakeLists.txt  setup.py
src/: CMakeLists.txt
